--- a/src/mytornado/myconfig/cassandraconfig.yaml
+++ b/src/mytornado/myconfig/cassandraconfig.yaml
@@ -1,12 +1,18 @@
-# YAML
-    --- !default
-    defaulttornadoport:8181
-    defaultcassandrarpc:9160
-    defaultcassandrajmx:7199
-    defaultcassandrastorage:7000
-    defaultcassandramx4j:7197
-    --- !ring1
-    #myjdk: 1_6_0 
-    #mypy: [/opt/python2.7.2,2.7.2]
-    #ring1: [10.0.0.1,10.0.0.2,10.0.0.3]
+---
+myconfiguration:
+    default:
+        defaulttornadoport:8181
+        defaultcassandrarpc:9160
+        defaultcassandrajmx:7199
+        defaultcassandrastorage:7000
+        defaultcassandramx4j:7197
+        defaultmysqld:3306
+        defaultmysqluser='chris'
+        defaultmysqldb='chris'
+        defaultmysqlpass='Free1Kick'
+        defaultmysqld='florence'
+
+    ring0:
+        myjdk: 1_6_0 
+        mypy: /opt/python2.7.2,2.7.2
 
