--- a/src/CassandraMonitor/mydatagatherer/mymysqlhandler/config.yaml
+++ b/src/CassandraMonitor/mydatagatherer/mymysqlhandler/config.yaml
@@ -5,8 +5,8 @@ mysql:
     host:   florence
     db:     chris
     pass:   Free1Kick
-    comins: show status where variable_name = 'Com_insert'\G;
-    bytes: show status where variable_name = 'Bytes_received'\G;
+    comins: show status where variable_name = 'Com_insert\G;'
+    bytes: show status where variable_name = 'Bytes_received\G;'
 
 
 
