--- a/src/CassandraMonitor/mydatagatherer/mymysqlhandler/config.yaml
+++ b/src/CassandraMonitor/mydatagatherer/mymysqlhandler/config.yaml
@@ -3,11 +3,17 @@ defaults: allrings
 mysql:
     user:   chris
     host:   florence
-    db:    mysql 
+    db:    chris 
     pass:   Free1Kick
     0comins: show status where variable_name = 'Com_insert';
     1bytes: show status where variable_name = 'Bytes_received';
 
+cassperf:
+    readstage: ReadStage
+    RRS:    RequestResponseStage
+    MS:     MutationsStage
+    RRPS:   ReadRepairStage
+    GS: GossipStage
 
 
 ring0: live
