--- a/src/CassandraMonitor/myconfig/config.yaml
+++ b/src/CassandraMonitor/myconfig/config.yaml
@@ -3,8 +3,20 @@ defaults: allrings
 mysql:
     user:   chris
     host:   florence
-    db:     chris
+    db:    chris 
     pass:   Free1Kick
+    0comins: show status where variable_name = 'Com_insert';
+    bytes: show status where variable_name = 'Bytes_received';
+    comcon: show status where variable_name = 'Connections';
+    comdbs: show status where variable_name = 'Com_show_databases';
+    
+cassperf:
+    readstage: ReadStage
+    RRS:    RequestResponseStage
+    MS:     MutationsStage
+    RRPS:   ReadRepairStage
+    GS: GossipStage
+
 
 ring0: live
 ring0:
