--- a/src/CassandraMonitor/myconfig/config.yaml
+++ b/src/CassandraMonitor/myconfig/config.yaml
@@ -17,9 +17,8 @@ cassperf:
     RRPS:   ReadRepairStage
     GS: GossipStage
 
-
-ring0: live
-ring0:
+ringlive: live
+ringlive:
     mysqluser:   chris
     mysqlhost:   florence
     mysqldb:     chris
@@ -33,11 +32,22 @@ ring0:
     cassmx4j:   7197
     PYTHONHOME: /opt/python-2.7.2
     JAVA_HOME:   /opt/jdk1.6.0_27
-ring0nodes:
-    node0: florence
-    node1: ermintrude
-    node2: celeste
-    node4: rosalie
-    nodemgt: casr1-vm10-dev
+    CASSANDRAHOME: /opt/cassandra-dev/apache-cassandra-0.8.5
+    cassandrabin: /bin/cassandra
+    cassandrayaml: -Dcassandra.config=file:cassandra.yaml
+    cassandraroot: /opt/cassandra-dev
+    cassandraverison: 0.8.5
+    cassandrastress: mycassandrastress/cassandrastress.py
+    nodetool: /bin/nodetool
+    CASSANDRALOGROOT: /opt/cassandra-dev/log
+    log: = /log/cassandra.log
+    pid: = /run/cassandra.pid
+    core: = /lock/subsys/cassandra
+    nodes:
+        node0: florence
+        node1: ermintrude
+        node2: celeste
+        node4: rosalie
+        nodemgt: casr1-vm10-dev
 ...
 
